<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="0dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="bizibox"
                android:textAlignment="center"
                android:textColor="#1287aa"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textUnderLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:layout_below="@+id/logo"
                android:text="@string/textUnderLogo"
                android:textAlignment="center"
                android:textColor="#1287aa"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/mTextError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="@string/error_incorrect_password"
                android:textColor="#ec3c66"
                android:textDirection="rtl"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/phoneViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/tel"
                android:textAlignment="textStart"
                android:textColor="#1287aa"
                android:textDirection="rtl"
                android:textSize="23sp" />

            <otpnew.bizibox.com.biziboxotp.PrefixEditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:digits="0123456789"
                android:gravity="left"
                android:hint=""
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:tag="+972 "
                android:textDirection="ltr"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mEmailViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textAlignment="textStart"
                android:textColor="#1287aa"
                android:textDirection="rtl"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:gravity="left"
                android:hint="@string/Username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textDirection="ltr"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mPasswordViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:textAlignment="textStart"
                android:textColor="#1287aa"
                android:textDirection="rtl"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:gravity="left"
                android:hint="@string/Password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textDirection="ltr"
                android:textSize="24sp"
                tools:ignore="InvalidImeActionId" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#1287aa"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


